chore(#3264181): update iframe style and behaviours

--- a/modules/druxt_node_preview/templates/druxt-node-preview.html.twig
+++ b/modules/druxt_node_preview/templates/druxt-node-preview.html.twig
@@ -1,5 +1,4 @@
-{{ attach_library('druxt_node_preview/preview') }}
+{{ attach_library('druxt_node_preview/druxt.node_preview') }}
 <div class="druxt-node-preview">
-  Druxt Node Preview
   <iframe src="{{ url }}"></iframe>
 </div>
